# constrained_BA

./: .gitignore  BA2D3Dbox.cbp  CMakeCache.txt  CMakeLists.txt  FInal.m  Makefile  README.md  ba2D3D  ba2D3Dbox  ba2D3DboxType  ba2D3DboxType.cc  ba2D3DboxType1  box_synthetic.m  box_synthetic.m~  bundleAdjustment2D3DBoxFile.m  bundle_data.mat  bundle_data_create.mat  bundle_data_moving.mat  bundle_data_moving_1.mat  bundle_data_moving_2.mat  bundle_data_stationary.mat  ceres_functions.cc  ceres_functions.h  ceres_functions.h.bkp  cmake_install.cmake  newmoving_212.mat  noise.m  recon_full_comparison_error_0.log~  result.txt  result1.txt  result2.txt  synthetic_data.mat  test  test.cc  trajectory.mat  trajectory_0.log~  uniform_on_cube.m
