CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
PROJECT(BA2D3Dbox CXX)

FIND_PACKAGE(Ceres REQUIRED)
INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})

ADD_EXECUTABLE(ba2D3Dbox ba2D3Dbox.cc)
TARGET_LINK_LIBRARIES(ba2D3Dbox ${CERES_LIBRARIES})

ADD_EXECUTABLE(ba2D3DboxType1 ba2D3DboxType.cc)
TARGET_LINK_LIBRARIES(ba2D3DboxType1 ${CERES_LIBRARIES})

ADD_EXECUTABLE(ba2D3D ba2D3D.cc)
TARGET_LINK_LIBRARIES(ba2D3D ${CERES_LIBRARIES})

ADD_EXECUTABLE(test test.cc)
TARGET_LINK_LIBRARIES(test ${CERES_LIBRARIES})
	
